	- merge PR #599 (by Cédric Krier)
		* Do not use FIPS and remove hardcode OPENSSL_VERSION_NUMBER with LibreSSL
	- update Docker mongoDB and fix with workaround the missing systemctl
	- merge PR #660 (by Camden Narzt)
		* fix compilation on macOS Big Sur
	- merge PR #546 (by jelmd)
		* Add ACME redirect url
	- merge PR #551 (by jelmd)
		* support of --acme-redirect <URL>

24/06/2020 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
Version 4.5.1.3 'dan Eider':
	- merge PR #575: (by osterik)
		* fix rpm packaging
	- merge PR #576: (by osterik)
		* tell tar to not include the metadata into release
	- merge PR #574: (by DevRockstarZ)
		* change Docker turnserver.conf to latest turnserver.conf
	- merge PR #566: (by bpcurse)
		* Remove reference to SSLv3
	- merge PR #579: (by islamoglus)
		*Ignore MD5 for BoringSSL
	- merge PR #577: (by osterik)
		*build RPM from local folder instead of git repo
	- Fix for CVE-2020-4067
		* STUN response buffer not initialized properly
		* The issue found and reported #583 by Felix Dörre all credits belongs to him.

30/04/2020 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
Version 4.5.1.2 'dan Eider':
	- merge regression fix: (by Mathieu Brunot)
		* Do not display empty CLI passwd alert if CLI is not enabled
	- merge PR #359: (by bradleythughes)
		* Remove turn_free_simple
		* Remove turn_malloc()
		* Remote turn_realloc()
		* Remote turn_free()
		* Remove turn_calloc()
		* Remove turn_strdup()
		* Remove SSL_NEW() and SSL_FREE()
		* Remove pointer debugging machinery
		* Remove ns_bzero(), ns_bcopy(), and ns_bcmp()
		* Remove [su]{08,16,32,64}bits type defines
	- merge PR #327 (by Alexander Terczka)
		* Strip white-spaces from config file lines end
	- merge PR #386 (by Thibaut ACKERMANN)
		* fix the webadmin ip permission add/delete sql injection
	- merge PR #390 (by Thibaut ACKERMANN)
		* fix mongo driver crash when invalid connection string is used