@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "15 December 2020" "" ""
+.TH TURN 1 "05 January 2021" "" ""
 .SH GENERAL INFORMATION
 
 The \fBTURN Server\fP project contains the source code of a TURN server and TURN client
@@ -343,6 +343,10 @@ Enable full ISO\-8601 timestamp in all logs.
 .B
 \fB\-\-new\-log\-timestamp\-format\fP
 <format>        Set timestamp format (in \fBstrftime\fP(1) format)
+.TP
+.B
+\fB\-\-log\-binding\fP
+Log STUN binding request. It is now disabled by default to avoid DoS attacks.
 .TP
 .B
 \fB\-\-secure\-stun\fP
